--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       crossorigin
     ></script>
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-    <title>ToDo with Classes</title>
+    <title>ToDo-C</title>
   </head>
   <body>
     <style>
