added some styles

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <style>
       li {
         margin-bottom: 5px;
+        color: lightseagreen;
       }
     </style>
     <div id="app"></div>
