--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <style>
       li {
         margin-bottom: 5px;
-        color: lightseagreen;
+        color: #333;
       }
     </style>
     <div id="app"></div>
